// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be render as element 1`] = `
<div class="fect-radio__group ">
  <!---->
</div>
`;

exports[`RadioGroup should be support differentSizes 1`] = `
<div class="fect-radio__group ">
  <div class="fect-radio" style="--radioSize: 12px;"><label class=""><input type="radio" value="mini"><span class="fect-radio__name"><span class="fect-radio__point  "></span>
      <!----></span>
    </label></div>
</div>
<div class="fect-radio__group ">
  <div class="fect-radio" style="--radioSize: 14px;"><label class=""><input type="radio" value="small"><span class="fect-radio__name"><span class="fect-radio__point  "></span>
      <!----></span>
    </label></div>
</div>
<div class="fect-radio__group ">
  <div class="fect-radio" style="--radioSize: 16px;"><label class=""><input type="radio" value="medium"><span class="fect-radio__name"><span class="fect-radio__point  "></span>
      <!----></span>
    </label></div>
</div>
<div class="fect-radio__group ">
  <div class="fect-radio" style="--radioSize: 18px;"><label class=""><input type="radio" value="large"><span class="fect-radio__name"><span class="fect-radio__point  "></span>
      <!----></span>
    </label></div>
</div>
`;

exports[`RadioGroup should be support initialValue 1`] = `
<div class="fect-radio__group ">
  <div class="fect-radio" style="--radioSize: 16px;"><label class=""><input type="radio" value="1"><span class="fect-radio__name"><span class="fect-radio__point  active"></span>
      <!----></span>
    </label></div>
  <div class="fect-radio" style="--radioSize: 16px;"><label class=""><input type="radio" value="2"><span class="fect-radio__name"><span class="fect-radio__point  "></span>
      <!----></span>
    </label></div>
</div>
`;
